--- a/lesson-1/homework/index.html
+++ b/lesson-1/homework/index.html
@@ -43,7 +43,7 @@
     <label for="usd-inp">Please enter your amount in USD</label>
     <input type="number" class="usd-inp">
     <button class="usd-convert">Convert to EUR</button>
-    h2.
+    <h2 class="converter-out"></h2>
     
     <!-- Here will be JavaScript -->
     <!-- Method One -->
