--- a/lesson-2/homework/index.html
+++ b/lesson-2/homework/index.html
@@ -26,10 +26,17 @@
     <p>Grocery calculator</p>
     <label for="wallet-inp">Please enter the amount of yout money</label>
     <input class="wallet-inp" type="number"><br>
-    <label for="choco-inp">Please enter price of a chocolate</label>
+    <label for="choco-inp">Please enter a price of one chocolate</label>
     <input class="choco-inp" type="number">
     <button class="grocery-btn">Calculate chocolates</button>
-    <h2 class="choco-out"></h2>
+    <h2 class="choco-out" style="margin-bottom: 100px;"></h2>
+
+    <!-- TASK 6 - Bank investments calc -->
+    <h2>Let's calculate your earnings for 2 Months</h2>
+    <label for="bank-inp">Please enter the value of your investment</label>
+    <input class="bank-inp" type="number">
+    <button class="bank-btn">Calculate</button>
+    <h2 class="bank-out"></h2>
 
 
 
