add-hw-cycles-02

--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson-3--Homework--Cycles</title>
     <style>
-        *{
+        * {
             font-family: 'Arial', sans-serif;
         }
     </style>
@@ -28,19 +28,28 @@
         <button class="symbol-btn">Find out the symbol</button>
         <p class="symbol-out" style="margin-bottom: 50px;"></p>
 
+        <!--Підрахуй суму всіх чисел в заданому користувачем діапазоні.-->
         <h4>Task 3</h4>
         <input class="number-inp1" type="number" placeholder="Enter first number">
         <input class="number-inp2" type="number" placeholder="Enter second number">
         <button class="number-btn">Calulate sum</button>
         <p class="number-out" style="margin-bottom: 50px;"></p>
+        
+        
+        <!-- Запитай у користувача 2 числа і знайди найбільший спільний дільник. -->
+        <h4>Task 4</h4>
+        <input type="number" class="max-div-inp1" placeholder="Enter first number">
+        <input type="number" class="max-div-inp2" placeholder="Enter second number">
+        <button class="calc-divider">Calculate greatest divisor</button>
+        <p class="out-divider" style="margin-bottom: 50px;"></p>
+
+
+        <!-- Запитай у користувача число і виведи всі дільники цього числа. -->
+        <h4>Task 5</h4>
+        <input type="number" class="all-dividers-inp">
+        <button class="all-dividers-btn">Calculate all dividers</button>
+        <p class="out-all-dividers"></p>
     </section>
-
-    <h2>Normal</h2>
-
-
-    <h2>Maximum</h2>
-
-
     <script src="./index.js"></script>
 </body>
 
