--- a/lesson-3-cycles/homework/index.html
+++ b/lesson-3-cycles/homework/index.html
@@ -50,7 +50,7 @@
         <button class="all-dividers-btn">Calculate all dividers</button>
         <p class="out-all-dividers"></p>
     </section>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
