--- a/lesson-3-cycles/homework/index.html
+++ b/lesson-3-cycles/homework/index.html
@@ -38,10 +38,10 @@
         
         <!-- Запитай у користувача 2 числа і знайди найбільший спільний дільник. -->
         <h4>Task 4</h4>
-        <input type="number" class="max-div-inp1" placeholder="Enter first number">
-        <input type="number" class="max-div-inp2" placeholder="Enter second number">
-        <button class="calc-divider">Calculate greatest divisor</button>
-        <p class="out-divider" style="margin-bottom: 50px;"></p>
+        <input type="number" class="num1" placeholder="Enter the first number">
+        <input type="number" class="num2" placeholder="Enter the second number">
+        <button class="max-divider">Calculate the greatest divider</button>
+        <p class="max-div-out"></p>
 
 
         <!-- Запитай у користувача число і виведи всі дільники цього числа. -->
@@ -50,7 +50,7 @@
         <button class="all-dividers-btn">Calculate all dividers</button>
         <p class="out-all-dividers"></p>
     </section>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
