--- a/lesson-4-functions/homework/index.html
+++ b/lesson-4-functions/homework/index.html
@@ -6,8 +6,49 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homework - Objects</title>
+    <style>
+        *{
+            font-family: 'Arial', sans-serif;
+        }
+        section{
+            max-width: 50vw;
+            margin: 0 auto 100px;
+        }
+        .wrap{
+            margin: 0 0 50px 0;
+        }
+    </style>
 </head>
 <body>
+    <section>
+        <h2>Minimum</h2>
+        <div class="wrap">
+            <h3>Task 1</h3>
+            <p class="out-1"></p>
+            <p class="out-1-1"></p>
+            <p class="out-1-2"></p>
+        </div>
+        <div class="wrap">
+            <h3>Task 2</h3>
+            <p class="out-2"></p>
+        </div>
+        <div class="wrap">
+            <h3>Task 3</h3>
+            <input type="number" class="i-3-1">
+            <input type="number" class="i-3-2">
+            <button class="btn-3">Task 3</button>
+            <p class="out-3"></p>
+        </div>
+        <div class="wrap">
+            <h3>Task 4</h3>
+            <input type="number" class="i-4">
+            <button class="btn-4">Task 4</button>
+            <p class="out-4"></p>
+        </div>
 
+
+    </section>
+
+    <script src="./index.js"></script>
 </body>
 </html>
